# muxly

./: .gitignore  CHANGES_SUMMARY.md  COMMIT_MESSAGE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  ISSUES.md  LICENSE  PROGRESS_SUMMARY.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  docker-compose.yml
.github/workflows/: ci.yml
config/: default.yaml  development.yaml  muxly.toml
docs/: README.md  project_status.md
docs/development/: connectors.md  database_schema.md  implementation_plan.md  known_issues.md  router_dependencies.md
docs/user-guide/: README.md  api.md  authentication.md  configuration.md  connectors.md  destinations.md  router-rules.md  router.md  scheduler.md
migrations/: README.md
migrations/20230501000000_initial/: down.sql
migrations/20230502000000_router_config/: down.sql
migrations/20230503000000_scheduler_jobs/: up.sql
migrations/20230504000000_auth_tables/: down.sql  up.sql
migrations/migrations_000001_initial/: up.sql
migrations/migrations_000002_router_config/: up.sql
migrations/migrations_000003_scheduler_jobs/: down.sql
scripts/: deploy-aws.sh
scripts/docker/: docker-build.sh  docker-compose.prometheus.yml
scripts/install/: install.sh
scripts/release/: prepare_release.sh
scripts/setup/: setup_dev_env.sh
scripts/testing/: benchmark.sh  run_tests.sh
scripts/utils/: check_dependencies.sh
src/: main.rs
src/api/: health.rs  mod.rs
src/api/handlers/: connectors.rs  health.rs  mod.rs  outputs.rs
src/api/middleware/: auth.rs  logging.rs  mod.rs
src/api/openapi/: mod.rs
src/api/routes/: mod.rs
src/api/routes/connectors/: mod.rs
src/api/routes/health/: mod.rs
src/api/routes/outputs/: mod.rs
src/auth/: credentials.rs  keycloak.rs  mod.rs  tokens.rs
src/collector/: api.rs  mod.rs  processors.rs  validation.rs
src/config/: defaults.rs  loader.rs  mod.rs  schema.rs  templates.rs  validation.rs
src/config/models/: app.rs  connectors.rs  mod.rs  router.rs  scheduler.rs
src/connectors/: api.rs  base.rs  bigquery.rs  ga4.rs  hubspot.rs  mod.rs  plugin.rs
src/diagnostics/: connection.rs  health.rs  troubleshoot.rs
src/error/: mod.rs  tests.rs
src/router/: destination_factory.rs  mod.rs  route.rs  router_factory.rs
src/router/destinations/: database.rs  email.rs  file.rs  mod.rs  slack.rs  storage.rs
src/router/routing/: conditions.rs  mod.rs  transformations.rs
src/scheduler/: api.rs  cron.rs  integration.rs  mod.rs  webhook.rs
src/storage/: database.rs  mod.rs
src/storage/migrations/: mod.rs
src/storage/models/: connector.rs  mod.rs
src/storage/models/output/: mod.rs
src/storage/models/schedule/: mod.rs
src/storage/models/sync_history/: mod.rs
src/storage/models/transformation/: mod.rs
src/storage/repositories/: mod.rs
src/transform/: mod.rs
src/transform/filtering/: mod.rs
src/transform/mapping/: mod.rs
src/transform/normalization/: mod.rs
src/transform/pipeline/: mod.rs
templates/connectors/: api_form.html  bigquery.json  ga4.json
templates/destinations/: file.json
templates/full_setups/: basic.json
