[package]
name = "muxly"
version = "0.1.0"
edition = "2021"
authors = ["Kelvin"]
description = "A lightweight, cross-platform service for collecting, unifying, and routing product metrics and data"
readme = "README.md"
license = "MIT"

[dependencies]
# API Framework
axum = { version = "0.6", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["trace", "cors"] }

# Serialization/Deserialization
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
toml = "0.8.12"

# Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "sqlite", "postgres", "json", "migrate", "chrono"] }

# Logging and tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"

# Scheduling
cron = "0.12.0"
chrono = { version = "0.4.35", features = ["serde"] }

# Networking
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"] }
url = "2.4.1"

# Error handling
thiserror = "1.0.50"
anyhow = "1.0.75"

# Configuration
config = "0.13.1"
dotenv = "0.15.0"

# Utilities
async-trait = "0.1.74"
futures = "0.3.29"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
regex = "1.10.2"
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"

# Additional dependencies
aes-gcm = "0.10.3"
base64 = "0.21.7"
rand = "0.8.5"

# New dependencies
once_cell = "1.19.0"

# Added dependency
hyper = { version = "0.14", features = ["server", "http1"] }

# Connector dependencies
gcp_auth = "0.11.0"  # For BigQuery authentication
libloading = "0.8.0" # For plugin system
oauth2 = "4.4.2"     # For OAuth authentication
bytes = "1.4.0"      # For working with binary data
log = "0.4.20"       # Logging facade

[dev-dependencies]
mockito = "1.2.0"
temp-env = "0.3.6"
tokio-test = "0.4.3"

[features]
default = ["sqlite"]
sqlite = []
postgres = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
